0.3.4 updates for mobile alignment fixes

--- a/src/main/resources/static/sass/gm.scss
+++ b/src/main/resources/static/sass/gm.scss
@@ -58,7 +58,7 @@ body {
 @keyframes fadeInOut {
     0% { opacity: 0; }
 
-    25% { opacity: 1; }
+    15% { opacity: 1; }
 
     100% { opacity: 0; }
 }
@@ -66,7 +66,7 @@ body {
 @-webkit-keyframes fadeInOut {
     0% { opacity: 0; }
 
-    25% { opacity: 1; }
+    15% { opacity: 1; }
 
     100% { opacity: 0; }
 }
@@ -97,8 +97,8 @@ body {
 }
 
 .fadeInOut {
-    -webkit-animation-name: fadeIn;
-    animation-name: fadeIn;
+    -webkit-animation-name: fadeInOut;
+    animation-name: fadeInOut;
 }
 
 .cfhead {
@@ -205,20 +205,25 @@ form#contactForm {
     padding-bottom: 10px;
 
     h1 {
-        padding-top: 35px;
-        margin-left: auto;
-        margin-right: auto;
-        font-family: Arvil, sans-serif;
+        padding: 25px 35px 25px 35px;
+        margin:auto auto;
+        font-family: Arvil, Helvetica, Arial, sans-serif;
         font-size: 3.5em;
-        color: #ffcc49;
+        border-radius: 7px;
+        background-color:$cadet-blue;
+        color: $lemon-meri;
     }
 
     h3 {
-        padding-bottom: 20px;
-        color: #ffcc69;
+        text-align:center;
+        padding: 10px 20px 10px 20px;
+        color: $dark-grey;
         line-height: 1.4em;
         font-family: Helvetica, Arial, sans-serif;
-        font-size: 2.2em;
+        font-size: 1em;
+        margin:auto auto;
+        border-radius: 7px;
+        background-color:$lemon-meri;
     }
 
 }
@@ -440,6 +445,9 @@ input.formwide {
 
 .form-group {
     max-height:40px;
+    max-width:100px;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
 }
 
 .validation {
@@ -460,8 +468,8 @@ input.formwide {
     border-radius: 3px;
     box-shadow: 5px 5px 2px rgba(0, 0, 0, 0.30);
     z-index:5;
-    -webkit-animation-duration: 8s;
-    animation-duration: 8s;
+    -webkit-animation-duration: 15s;
+    animation-duration: 15s;
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
 }
@@ -1882,7 +1890,7 @@ p {
             span {
                 line-height:22px;
                 margin: 4px 0 0 0;
-                font-size: 1.75em;
+                font-size: 2.35em;
                 font-family:Arvil, Helvetica, Arial sans-serif;
             }
 
